# app/Http/Requests/LoginRequest.php
@@ -22,8 +22,9 @@ class LoginRequest extends FormRequest
     public function rules(): array
     {
         return [
-            'email' => ['required', 'email'],
-            'password' => ['required'],
+            'email' => ['required', 'string', 'email'],
+            'password' => ['required', 'string'],
+            'two_factor_code' => ['nullable', 'string', 'size:6']
         ];
     }
 }
